--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ body {
   transition: all 0.5s ease;
   z-index: 2;
   padding: 20px;
-  margin-bottom: 60px;
+  margin-bottom: 150px;
 }
 .maxsidebar.open ~ .dashboard-section {
   left: 250px;
@@ -213,7 +213,7 @@ body {
 
 .dashboard-section .welcome-text {
   color: #11101d;
-  font-size: 25px;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 
@@ -277,7 +277,6 @@ body {
   border: 1px solid #00000022;
   text-align: center;
   padding: 10px;
-
 }
 
 .dashboard-recents div table td {
@@ -300,13 +299,13 @@ body {
   .mobilebar {
     display: block;
     width: 100vw;
+    height: 60px;
     background-color: #11101d;
     position: fixed;
     bottom: 0;
     left: 0;
     z-index: 100;
-    padding: 10px 5px;
-    height: 60px;
+    padding: 10px 5px !important;
   }
 
   .mobilebar .mb-list {
@@ -318,24 +317,26 @@ body {
   .mobilebar li a {
     display: grid;
     place-items: center;
-    font-size: 10px;
+    font-size: 0.7rem;
     text-decoration: none;
     color: white;
   }
 
   .mobilebar li a i {
-    font-size: 24px;
+    font-size: 1.2rem;
     margin-bottom: 8px;
   }
 
   /* Dashboard */
 
   .dashboard-section {
-    position: relative;
+    position: static;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
-    width: 100%;
     transition: all 0.5s ease;
     z-index: 2;
+    padding: 30px;
   }
 }
