--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 :root {
   --green: #0ac30a;
   --lightgreen: #0ac30a37;
+  --verylightgreen: #aad2aa17;
+  --darkgreen: #088738;
   --blue: #037eff;
 }
 * {
@@ -16,7 +18,7 @@ body {
   background-color: #e4e9f7;
 }
 
-/* Desktop Sidebar */
+/* ------------------------ Desktop Sidebar ------------------------*/
 
 .maxsidebar {
   position: fixed;
@@ -181,13 +183,13 @@ body {
   margin-right: 10px;
 }
 
-/* Mobile Bar */
+/* -------------------------------- Mobile Bar ------------------------- */
 
 .mobilebar {
   display: none;
 }
 
-/* Dashboard */
+/* ---------------------------  Dashboard (Commom ) ---------------------- */
 
 .dashboard-section {
   position: relative;
@@ -197,8 +199,8 @@ body {
   transition: all 0.5s ease;
   z-index: 2;
   padding: 20px;
-  margin-bottom: 300px;
 }
+
 .maxsidebar.open ~ .dashboard-section {
   left: 250px;
   width: calc(100% - 250px);
@@ -262,9 +264,8 @@ body {
   background-color: #ffc8002c;
 }
 
-.dashboard-cols div h5 {
+.dashboard-cols div h4 {
   font-weight: 500;
-  font-size: 1rem;
 }
 
 .dashboard-cols div p {
@@ -272,6 +273,8 @@ body {
   font-weight: 600;
   margin-top: 5px;
 }
+
+/* ------------------------ Dashboard ----------------------- */
 
 .dashboard-recents div table {
   background-color: var(--lightgreen);
@@ -291,16 +294,99 @@ body {
   padding: 10px;
 }
 
+/* ------------------------ Leaves ----------------------- */
+
+.leave-form form {
+  background-color: var(--verylightgreen);
+  padding: 20px 0;
+}
+
+.leave-form h1 {
+  font-size: 1.4rem;
+}
+
+.leave-type h6,
+.leave-date h6,
+.leave-reason h6 {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.leave-type input,
+.leave-type input:hover {
+  accent-color: green;
+  cursor: pointer;
+}
+
+.leave-type label {
+  margin-right: 30px;
+  margin-top: 10px;
+  font-size: 1rem;
+  color: grey;
+}
+
+.leave-date input {
+  border: 1px solid gray;
+  color: grey;
+  padding: 5px 10px;
+  border-radius: 3px;
+  width: 70%;
+}
+
+.leave-reason textarea {
+  width: 90%;
+  padding: 10px;
+}
+
+.leave-form button:first-child,
+.leave-form button:last-child:hover {
+  background-color: var(--darkgreen);
+  color: white;
+  border: 2px solid transparent;
+  margin-right: 10px;
+  padding: 5px 20px;
+}
+.leave-form button:first-child:hover,
+.leave-form button:last-child {
+  border: 2px solid var(--darkgreen);
+  background-color: transparent;
+  color: var(--darkgreen);
+  padding: 5px 20px;
+}
+
+.leave-history table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+  background-color: white;
+}
+
+.leave-history th,
+.leave-history td {
+  text-align: center;
+  padding: 8px;
+  border-right: 1px solid white;
+}
+
+.leave-history th {
+  background-color: rgb(209, 208, 208);
+  font-weight: 550;
+}
+
+.leave-history tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 /* -------------------- Mobile and Tablet View ----------------------- */
 
 @media screen and (max-width: 992px) {
-  /* Dekstop SideBar */
+  /* ---------------------- Dekstop SideBar -------- */
 
   .maxsidebar {
     display: none;
   }
 
-  /* Mobile Bar */
+  /* ---------------------- Mobile Bar -------------*/
 
   .mobilebar {
     display: block;
@@ -339,7 +425,7 @@ body {
     font-size: 0.7rem;
     text-decoration: none;
     color: white;
-    background-color:#11101d;
+    background-color: #11101d;
     border: none;
   }
 
@@ -356,7 +442,7 @@ body {
       opacity: 1;
     }
   }
- 
+
   .dropdown-menu {
     opacity: 1;
     animation: Opacity 0.3s linear;
@@ -374,7 +460,7 @@ body {
     margin-right: 10px;
   }
 
-  /* Dashboard */
+  /*----------------------- Dashboard (Common )------------------ */
 
   .dashboard-section {
     position: static;
@@ -389,5 +475,14 @@ body {
 
   .dashboard-section .welcome-text {
     font-size: 1.3rem;
+  }
+
+  .empty {
+    height: 30vh;
+  }
+  /*----------------------- Leave ------------------ */
+
+  .leave-type label {
+    margin-right: 0px;
   }
 }
