--- a/style.css
+++ b/style.css
@@ -16,7 +16,75 @@
 
 body {
   background-color: #e4e9f7;
+  overflow-x: hidden;
 }
+
+/* ---------------------------- Log in ------------------------- */
+
+.login {
+  height: 100vh;
+}
+
+.log-left {
+  background: url(Images/login.jpg) rgb(8, 135, 57);
+  background-size: cover;
+  background-blend-mode: multiply;
+  background-position: right;
+}
+
+.log-left img {
+  width: 400px;
+  margin-bottom: 30px;
+}
+
+.log-left h3 {
+  color: white;
+}
+
+.log-right {
+  background-color: var(--verylightgreen);
+}
+
+.log-right form{
+  width:400px;
+  padding: 20px ;
+}
+
+.log-right h3{
+  margin-bottom: 25px;
+}
+
+.log-right form label{
+  margin-bottom: 10px;
+}
+.log-right form input{
+  padding: 5px 10px;
+  width: 100%;
+  border: 1px solid grey;
+  border-radius: 2px;
+  margin-bottom: 15px !important;
+  outline: none;
+}
+
+.log-right .login-btn{
+  background-color: var(--darkgreen);
+  border: none;
+  width: 100%;
+  padding: 6px 10px;
+  border-radius: 3px;
+  color: white;
+  margin-top: 10px;
+}
+
+.log-right .forgot-pass{
+  margin-top: 20px;
+  background-color: transparent;
+  border: none;
+  font-size: .9rem ;
+  color: var(--darkgreen);
+  float: right;
+}
+
 
 /* ------------------------ Desktop Sidebar ------------------------*/
 
@@ -418,7 +486,7 @@ body {
 .in-main-head button {
   border: none;
   padding: 4px 10px;
-  font-size: .8rem;
+  font-size: 0.8rem;
   border-radius: 5px;
   background-color: var(--darkgreen);
   color: white;
