--- a/style.css
+++ b/style.css
@@ -45,46 +45,60 @@ body {
   background-color: var(--verylightgreen);
 }
 
-.log-right form{
-  width:400px;
-  padding: 20px ;
+.log-right form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+  padding:30px;
+  background-color: rgb(255, 255, 255);
+  height: 500px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.22);
 }
 
-.log-right h3{
-  margin-bottom: 25px;
+.log-right h3 {
+  margin-bottom: 40px !important;
+  text-transform: uppercase;
+  color: var(--darkgreen);
+  font-weight: 600;
+  letter-spacing: 1.5px;
+  text-align: center;
+  font-size: 2rem;
 }
 
-.log-right form label{
-  margin-bottom: 10px;
-}
-.log-right form input{
-  padding: 5px 10px;
+.log-right form input {
+  padding: 5px 0px;
   width: 100%;
-  border: 1px solid grey;
-  border-radius: 2px;
-  margin-bottom: 15px !important;
+  border: none;
+  border-bottom: 1px solid var(--darkgreen);
+  background-color: transparent;
+  margin-bottom: 20px !important;
   outline: none;
 }
 
-.log-right .login-btn{
+.log-right .login-btn {
   background-color: var(--darkgreen);
   border: none;
   width: 100%;
-  padding: 6px 10px;
+  padding: 10px 10px;
   border-radius: 3px;
   color: white;
-  margin-top: 10px;
+  margin-top: 30px;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
 
-.log-right .forgot-pass{
-  margin-top: 20px;
+.log-right .forgot-pass {
   background-color: transparent;
   border: none;
-  font-size: .9rem ;
+  font-size: 0.9rem;
   color: var(--darkgreen);
-  float: right;
+  width: 100%;
+  text-align: right;
+  margin-top: 10px;
 }
-
 
 /* ------------------------ Desktop Sidebar ------------------------*/
 
