--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
   overflow-x: hidden;
 }
 
+body.rtl {
+  direction: rtl;
+}
+
 /* ---------------------------- Log in ------------------------- */
 
 .login {
@@ -113,6 +117,11 @@ body {
   z-index: 99;
   transition: all 0.5s ease;
 }
+
+.maxsidebar.rlt {
+  right: 0;
+}
+
 .maxsidebar.open {
   width: 250px;
 }
@@ -176,6 +185,12 @@ body {
   pointer-events: none;
   transition: 0s;
 }
+
+.maxsidebar li .tooltip.rlt {
+  left: auto;
+  right: calc(100% + 15px);
+}
+
 .maxsidebar li:hover .tooltip {
   opacity: 1;
   pointer-events: auto;
@@ -249,6 +264,9 @@ body {
   transition: all 0.5s ease;
   overflow: hidden;
 }
+.maxsidebar li.profile.rlt {
+  right: 0;
+}
 .maxsidebar.open li.profile {
   width: 250px;
 }
@@ -273,6 +291,10 @@ body {
 
 /* ---------------------------  Dashboard (Commom ) ---------------------- */
 
+.lang-dropdown:hover .lang-dropdown-content {
+  display: block;
+}
+
 .dashboard-section {
   position: relative;
   top: 0;
@@ -283,9 +305,23 @@ body {
   padding: 20px;
 }
 
+.dashboard-section.rlt {
+  left: 0;
+  right: 78px;
+}
+
+.rtl .dashboard-section {
+  left: 0;
+}
+
 .maxsidebar.open ~ .dashboard-section {
   left: 250px;
   width: calc(100% - 250px);
+}
+
+.maxsidebar.open ~ .dashboard-section.rlt {
+  right: 250px;
+  left: 0px;
 }
 
 .dashboard-section header {
@@ -306,6 +342,11 @@ body {
   color: var(--blue);
 }
 
+.header-btns button{
+  border: none;
+  background-color: transparent;
+}
+
 .header-btns a {
   color: black;
   font-size: 25px;
@@ -313,14 +354,32 @@ body {
   border-radius: 50%;
 }
 
-.header-btns button {
-  font-size: 21px;
+.lang-dropdown {
+  position: relative;
+  cursor: pointer;
   border: none;
-  background: none;
+  background-color: transparent;
 }
 
-.header-btns a:hover {
-  font-size: 30px;
+.lang-dropdown span {
+  font-size: 1rem;
+  margin-right: 5px;
+}
+
+.lang-dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
+  z-index: 1;
+  background-color: white;
+  color: black;
+  padding: 5px 10px;
+}
+
+.lang-dropdown-content p {
+  font-size: 1rem !important;
 }
 
 .dashboard-cols .card {
@@ -464,7 +523,7 @@ body {
   background-color: #f2f2f2;
 }
 
-/* ---------------------- Payroll -------- */
+/* ---------------------- Payroll --------------- */
 
 .in-main-heads {
   border-top: 1px solid gray;
@@ -526,14 +585,15 @@ body {
 .payroll-search {
   width: 100%;
   margin-top: 20px;
-  padding: 5px 10px;
+  padding: 5px 0px;
   border: 1px solid gray;
   outline: none;
   border-radius: 3px;
 }
+
 .payroll-search span {
   color: gray;
-  margin-right: 10px;
+  margin: 0 10px;
 }
 .payroll-search input {
   outline: none;
@@ -675,6 +735,11 @@ center {
   border-radius: 5px;
   background-color: var(--darkgreen);
   color: white;
+}
+
+.payroll-plus-btn.rlt{
+  right: auto;
+  left: 50px;
 }
 
 /* ---------------------- Reimbursement -------- */
