--- a/style.css
+++ b/style.css
@@ -816,7 +816,7 @@ center {
   object-fit: cover;
 }
 
-.pro-img h5{
+.pro-img h5 {
   font-weight: 600;
 }
 
@@ -850,8 +850,7 @@ center {
   color: var(--black);
 }
 
-
-.per-details table tr td{
+.per-details table tr td {
   padding: 10px 40px;
 }
 
@@ -861,9 +860,47 @@ center {
   color: var(--darkgreen);
 }
 
-.per-details table tr td{
-  font-weight:500 ;
+.per-details table tr td {
+  font-weight: 500;
 }
+
+.profile-picture {
+  width: 100px;
+  height: 100px;
+  border: 2px dashed #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.file-uploader {
+  display: none;
+}
+
+.upload-icon {
+  color: #999;
+}
+
+#edit-personal-details input , #edit-profile-address input {
+  width: 100%;
+  border: 1px solid gray;
+  padding: 3px 10px;
+  outline: none;
+  border-radius: 2px;
+}
+
+#edit-personal-details select {
+  width: 100%;
+  padding: 3px 10px;
+  border-radius: 2px;
+}
+
+#edit-personal-details , #edit-profile-address{
+  display: none;
+}
+
+
 
 /* -------------------- Mobile and Tablet View ----------------------- */
 
