--- a/style.css
+++ b/style.css
@@ -45,25 +45,6 @@ body.dark-mode {
 
 .login {
   height: 100vh;
-}
-
-.log-left {
-  background: url(Images/login.jpg) rgba(8, 135, 57, 0.79);
-  background-size: cover;
-  background-blend-mode: multiply;
-  background-position: right;
-}
-
-.log-left img {
-  width: 400px;
-  margin-bottom: 30px;
-}
-
-.log-left h3 {
-  color: white;
-}
-
-.log-right {
   background-color: var(--verylightgreen);
 }
 
@@ -74,15 +55,19 @@ body.dark-mode {
   width: 400px;
   padding: 30px;
   background-color: rgb(255, 255, 255);
-  height: 500px;
+  height: 550px;
   border-radius: 5px;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.22);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+}
+
+.wel-txt{
+  text-align: center;
+  color: gray;
+  margin: 10px 0 40px 0;
 }
 
 .log-right h3 {
-  margin-bottom: 40px !important;
   text-transform: uppercase;
-  color: var(--darkgreen);
   font-weight: 600;
   letter-spacing: 1.5px;
   text-align: center;
@@ -99,13 +84,9 @@ body.dark-mode {
   outline: none;
 }
 
-.mobile-welcome{
+.login-pg-logo {
   text-align: center;
-  margin-bottom: 10px;
-}
-
-.mobile-welcome h6{
-  margin-top: 10px;
+  margin-bottom: 50px;
 }
 
 .log-right #login-btn,
@@ -599,9 +580,17 @@ body.dark-mode {
   height: 80vh;
 }
 
+.in-main-cont-left::-webkit-scrollbar {
+  width: 0px;
+}
+
 .in-main-cont-rigth {
   overflow-y: scroll;
   height: 80vh;
+}
+
+.in-main-cont-rigth::-webkit-scrollbar {
+  width: 0px;
 }
 
 .in-main-head span {
@@ -778,7 +767,7 @@ center {
 }
 
 .pay-detail-td {
-  width: 100%;
+  width: 100% !important;
 }
 
 .payroll-plus-btn {
