--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body.dark-mode {
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
 }
 
-.wel-txt{
+.wel-txt {
   text-align: center;
   color: gray;
   margin: 10px 0 40px 0;
@@ -369,8 +369,17 @@ body.dark-mode {
   font-weight: 600;
 }
 
-.dashboard-section .welcome-text span {
+.welcome-text-dashboard {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.dashboard-section .welcome-text span , .welcome-text-dashboard span {
   color: var(--blue);
+}
+
+.quick-txt{
+  color: gray;
 }
 
 .header-btns button {
@@ -437,14 +446,34 @@ body.dark-mode {
   background-color: #ffc8002c;
 }
 
-.dashboard-cols div h4 {
-  font-weight: 500;
+.card-logo {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
-.dashboard-cols div p {
-  font-size: 1.1rem;
+.card-logo div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border: 1px solid  gray;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.card-logo img {
+  width: 25px;
+}
+
+.dashboard-cols .card-title {
+  font-size: 1rem;
+}
+
+.dashboard-cols .card-text {
+  font-size: 1.4rem;
   font-weight: 600;
-  margin-top: 5px;
+  margin-bottom: 10px !important;
 }
 
 .empty {
@@ -453,23 +482,65 @@ body.dark-mode {
 
 /* ------------------------ Dashboard ----------------------- */
 
-.dashboard-recents div table {
-  background-color: var(--lightgreen);
+.table-dashboard {
   width: 100%;
-  margin-top: 20px;
+  border-collapse: collapse;
+  background-color: #ffffff;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+
 }
 
-.dashboard-recents div table th {
-  border: 1px solid #00000022;
-  text-align: center;
-  padding: 10px;
+.table-dashboard thead {
+  background-color: var(--lightgreen);
+  color: black !important;
 }
 
-.dashboard-recents div table td {
-  border: 1px solid #00000022;
-  text-align: center;
-  padding: 10px;
+.table-dashboard th, .table-dashboard td {
+  padding: 12px 20px;
+  text-align: left;
+  font-size: 15px;
 }
+
+.table-dashboard th {
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.table-dashboard tbody tr {
+  border-bottom: 1px solid #e9ecef;
+  background-color: var(--verylightgreen);
+  transition: background-color 0.3s ease;
+}
+
+.table-dashboard tbody tr:hover {
+  background-color: #f0efef;
+}
+
+.table-dashboard tbody tr:last-child {
+  border-bottom: none;
+}
+
+.table-dashboard td {
+  font-weight: 500;
+  color: #495057;
+}
+
+.table-dashboard .table-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 15px;
+  color: #212529;
+}
+
+.table-dashboard tbody td:first-child {
+  color: var(--darkgreen); 
+}
+
+  
+
+
 
 /* ------------------------ Leaves ----------------------- */
 
@@ -1030,6 +1101,10 @@ center {
 
   .dashboard-section .welcome-text {
     font-size: 1.3rem;
+  }
+
+  .welcome-text-dashboard {
+    font-size: 1.5rem;
   }
 
   /*----------------------- Leave ------------------ */
