--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ body.dark-mode {
 
 .table-dashboard {
   width: 100%;
-  table-layout: fixed; /* Ensures the table adjusts to the container */
+  table-layout: fixed;
   border-collapse: collapse;
   background-color: #ffffff;
   overflow: hidden;
@@ -513,10 +513,10 @@ body.dark-mode {
 
 .table-dashboard th,
 .table-dashboard td {
-  padding: 13px 20px;
+  padding: 13px 5px;
   font-size: 15px;
   text-align: center;
-  word-wrap: break-word; /* Allows content to wrap within the cell */
+  word-wrap: break-word;
 }
 
 .table-dashboard th {
@@ -554,7 +554,7 @@ body.dark-mode {
   font-size: 13px;
   padding: 5px 20px;
   border-radius: 20px;
-  width: 100%; /* Makes buttons take full width */
+  width: 100%;
   background-color: transparent;
 }
 
@@ -570,6 +570,7 @@ body.dark-mode {
 
 .recent-Reimbursement-table th:last-child {
   text-align: right;
+  padding-right: 10px;
 }
 
 .recent-Reimbursement-table td:last-child {
@@ -1277,6 +1278,16 @@ body.dark-mode {
     font-size: 12px;
     border: none;
     padding: 5px 5px;
+  }
+
+  .table-dashboard th,
+  .table-dashboard td {
+    font-size: 13px;
+  }
+
+  .chart-container {
+    width: 100%;
+    height: 180px;
   }
 
   /*----------------------- Leave ------------------ */
