--- a/style.css
+++ b/style.css
@@ -140,6 +140,14 @@ body.dark-mode {
   display: none;
 }
 
+.lg-links a,
+.lg-links {
+  text-decoration: none;
+  color: #646464;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
 /* ------------------------ Desktop Sidebar ------------------------*/
 
 .maxsidebar {
@@ -339,7 +347,7 @@ body.dark-mode {
   width: calc(100% - 78px);
   transition: all 0.5s ease;
   z-index: 2;
-  padding: 20px;
+  padding: 20px !important;
 }
 
 .dashboard-section.rlt {
@@ -401,16 +409,12 @@ body.dark-mode {
   background-color: transparent;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.3s;
-  color: var(--link-color);
+  color: var(--darkgreen);
   font-size: 1.5rem;
 }
 
-.header-btns button:hover {
-  transform: scale(1.1);
-}
-
 .header-btns a {
-  color: var(--link-color);
+  color: var(--darkgreen);
   font-size: 24px;
   transition: color 0.3s;
 }
@@ -424,13 +428,13 @@ body.dark-mode {
   cursor: pointer;
   border: none;
   background-color: transparent;
-  color: var(--link-color);
+  color: var(--blue);
   z-index: 10;
 }
 
 .lang-dropdown span {
   font-size: 1rem;
-  color: var(--link-color);
+  color: var(--darkgreen);
 }
 
 .lang-dropdown-content {
@@ -480,11 +484,14 @@ body.dark-mode {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   position: relative;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .notification:hover {
   transform: translateY(-3px);
-  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .notification p {
@@ -493,10 +500,7 @@ body.dark-mode {
 }
 
 .timestamp {
-  display: block;
-  margin-top: 8px;
   font-size: 14px;
-  text-align: right;
 }
 
 .dashboard-cols .card {
@@ -504,7 +508,7 @@ body.dark-mode {
   display: flex;
   flex-direction: column;
   border: none !important;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.025);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -628,7 +632,6 @@ body.dark-mode {
   font-size: 13px;
   padding: 5px 20px;
   border-radius: 20px;
-  width: 100%;
   background-color: transparent;
 }
 
@@ -1073,6 +1076,7 @@ body.dark-mode {
   border: 1px solid #ced4da;
   transition: border-color 0.3s ease;
   outline: none !important;
+  width: 300px !important;
 }
 
 .Download-Summary-btn {
@@ -1181,7 +1185,7 @@ body.dark-mode {
     color: gray;
   }
 
-  .daterangepicker .cancelBtn{
+  .daterangepicker .cancelBtn {
     color: gray;
   }
 }
@@ -1525,5 +1529,19 @@ body.dark-mode {
     position: fixed;
     bottom: 85px;
     right: 30px;
+  }
+  /* ------------------- Attendence -------- */
+
+  .date-picker,
+  .date-range-picker {
+    width: 180px !important;
+  }
+}
+
+/* ------ Large Screens ----- */
+
+@media (min-width: 992px) {
+  .reimbursement-form input {
+    width: 70%;
   }
 }
